syntax = "proto3";

package com.road.yishi.proto.carnival;

message CarnivalTaskListMsg {
  repeated int32 tasks = 1;
}
